Fix preformatted text alignment in Gutenberg

--- a/sass/gutenberg/blocks/_core-code.scss
+++ b/sass/gutenberg/blocks/_core-code.scss
@@ -8,7 +8,8 @@ pre {
   font-family: var(--font-monospace);
   font-size: var(--font-size-16);
   line-height: var(--line-height-paragraphs-blog);
-  margin: 3rem 0;
+  margin-bottom: var(--margin-between-text-elements);
+  margin-top: var(--margin-between-text-elements);
   overflow: auto;
   padding: 15px 16px 14px;
   position: relative;
